--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node-sass scss/main.scss css/main.css",
-    "dev": "node-sass scss/main.scss css/main.css --watch"
+    "compile-sass": "node-sass sass/main.scss css/main.css --watch"
   },
   "repository": {
     "type": "git",
