--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile-sass": "node-sass sass/main.scss css/main.css --watch"
+    "build": "node-sass sass/main.scss css/main.css",
+    "dev": "node-sass sass/main.scss css/main.css --watch"
   },
   "repository": {
     "type": "git",
